# flext-oracle-wms

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  FINAL_HONEST_RESULTS.md  Makefile  README.md  TODO.md  api-reference.md  architecture.md  base.mk  complete_mock_pipeline.py  configuration.md  conftest.py  custom.mk  custom.mk.rej  development.md  docker-compose.yml  docker-run.sh  getting-started.md  mkdocs.yml  oracle_wms_complete_discovery.py  oracle_wms_focused_discovery.py  oracle_wms_optimized_discovery.py  pyproject.docker.toml  pyproject.toml  pyrefly_errors.json  pyrefly_errors_after_fixes.json  sitecustomize.py  test_basic_entities.py  test_fix_field_validation.py  test_honest_mock_framework.py  test_real_oracle_wms.py  test_real_wms.py  troubleshooting.md  ultra_fast_discovery.py  {}
.github/workflows/: ci.yml
.qlty/: qlty.toml
.scope/: config.toml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  flext-cli-deep-analysis-findings.md  precise_implementation_statistics.md  project_purpose_and_tech_stack.md  suggested_commands.md  task_completion_workflow.md
complete_pipeline_results/: dbt_transformations_20250801_215740.json  dbt_transformations_20260704_180008.json  dbt_transformations_20260704_180045.json  dbt_transformations_20260704_180106.json  pipeline_summary_20250801_215740.json  pipeline_summary_20260704_180008.json  pipeline_summary_20260704_180045.json  pipeline_summary_20260704_180106.json  singer_catalog_20250801_215740.json  singer_catalog_20260704_180106.json  singer_schemas_20250801_215740.json  singer_schemas_20260704_180106.json  tap_extraction_20250801_215740.json  tap_extraction_20260704_180008.json  tap_extraction_20260704_180045.json  tap_extraction_20260704_180106.json  target_loading_20250801_215740.json  target_loading_20260704_180008.json  target_loading_20260704_180045.json  target_loading_20260704_180106.json
docs/: COMPREHENSIVE_WMS_TEST_GUIDE.md  README.md  TODO.md  api-reference.md  architecture.md  configuration.md  development.md  flext-ecosystem.md  getting-started.md  index.md  integration.md  troubleshooting.md
docs/api-reference/: README.md
docs/architecture/: README.md
docs/examples/: advanced-patterns.md  basic-usage.md  integration-examples.md
docs/guides/: README.md  configuration.md  development.md  flext-ecosystem.md  getting-started.md  integration.md  security.md  skill-automation-pattern.md  testing.md  troubleshooting.md
docs/integration/: README.md  flext-ecosystem.md
docs/pydantic-v2-modernization/: audit_pydantic_v2.py
docs/standards/: README.md  python-module-organization.md
examples/: 01_basic_usage.py  02_configuration.py  02_singleton_config.py  03_complete_functionality_showcase.py  04_docker_complete_validation.py  README.md  __init__.py  basic_usage.py  complete_functionality_showcase.py  configuration.py  docker_complete_validation.py  test_declarative_example.py
examples/tests/: __init__.py  conftest.py  conftest_project.py  test_declarative_example.py
guides/: README.md  configuration.md  development.md  flext-ecosystem.md  getting-started.md  integration.md  security.md  skill-automation-pattern.md  testing.md  troubleshooting.md
scripts/: README.md  analyze_wms_data.py
src/: README.md
src/flext_oracle_wms/: README.md  __init__.py  __init__.pyi  __version__.py  _backward_compat.py  _config.py  _exports.py  _exports_lazy_part_01.py  _models.py  _settings.py  api.py  api_catalog.py  api_service.py  authentication.py  cache.py  client.py  client_class.py  client_settings.py  config.py  config_class.py  config_module.py  constants.py  discovery.py  dynamic.py  entity_discovery_service.py  errors.py  exceptions.py  filtering.py  flattening.py  helpers.py  helpers_compat.py  http_client.py  legacy.py  mock_server.py  models.py  plugin_implementation.py  protocols.py  settings.py  type_mapping.py  typedefs.py  (+15 more)
src/flext_oracle_wms/_models/: __init__.py  config.py
src/flext_oracle_wms/_protocols/: __init__.py  config.py
src/flext_oracle_wms/_utilities/: __init__.py  auth.py  client.py  discovery.py  filtering.py  http_client.py
src/flext_oracle_wms/common/: __init__.py
src/flext_oracle_wms/config/: __init__.py  oracle-wms.yaml  types.py
src/flext_oracle_wms/filtering/: __init__.py  advanced.py
src/flext_oracle_wms/infrastructure/: __init__.py  flext_oracle_wms_cache.py  (+1 more)
src/flext_quality/: __init__.py  protocols.py
tests/: README.md  __init__.py  _exports.py  _exports_lazy_part_01.py  _exports_lazy_part_02.py  _factories.py  base.py  complete_mock_pipeline.py  conftest.py  conftest_new.py  conftest_project.py  constants.py  models.py  oracle_wms_complete_discovery.py  oracle_wms_focused_discovery.py  oracle_wms_optimized_discovery.py  protocols.py  settings.py  sitecustomize.py  test_authentication.py  test_authentication_core.py  test_authentication_core_coverage.py  test_authentication_coverage.py  test_authentication_simple.py  test_authentication_simple_coverage.py  test_cache.py  test_cache_comprehensive_coverage.py  test_client.py  test_client_class.py  test_client_comprehensive.py  test_client_core.py  test_client_core_coverage.py  test_client_main_coverage.py  test_client_simple.py  test_config.py  test_config_module.py  test_connection.py  test_declarative.py  test_discovery.py  test_discovery_comprehensive_coverage.py  (+23 more)
tests/fixtures/: __init__.py
tests/unit/: __init__.py  complete_mock_pipeline.py  oracle_wms_complete_discovery.py  oracle_wms_focused_discovery.py  oracle_wms_optimized_discovery.py  sitecustomize.py  test_api.py  test_authentication.py  test_authentication_core.py  test_client.py  test_client_class.py  test_client_core.py  test_config.py  test_config_domains.py  test_config_module.py  test_connection.py  test_constants.py  test_declarative.py  test_discovery.py  test_filtering.py  test_helpers.py  test_helpers_core.py  test_models.py  test_schema_dynamic.py  test_singer_flattening.py  test_unified_config.py  test_wms_api.py  test_wms_client.py
(+4 files in other folders)
