[build-system]
    build-backend = "poetry.core.masonry.api"
    requires = [
        "poetry-core>=1.9.0",
    ]

[project]
    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.13",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Typing :: Typed",
    ]
    dependencies = [
        "pydantic (>=2.12.3)",
        "pydantic-settings (>=2.11.0)",
        "python-dotenv (>=1.1.1)",
        "pydantic-core (>=2.41.4)",
    ]
    description = "Enterprise Oracle WMS client library for FLEXT data integration platform"
    keywords = [
        "adapter",
        "enterprise",
        "flext",
        "integration",
        "typed",
    ]
    name = "flext-oracle-wms"
    readme = "README.md"
    requires-python = ">=3.13,<3.14"
    version = "0.10.0-dev"
    [[project.authors]]
        email = "team@flext.sh"
        name  = "FLEXT Team"

    [[project.maintainers]]
        email = "team@flext.sh"
        name  = "FLEXT Team"

    [project.license]
        text = "MIT"

    [project.urls]
        Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"
        Homepage      = "https://github.com/flext-sh/flext"
        Repository    = "https://github.com/flext-sh/flext"

[tool.deptry]
    known_first_party = [
        "flext_oracle_wms",
        "flext_core",
        "flext_observability",
        "flext_api",
    ]
    pep621_dev_dependency_groups = [
        "dev",
        "test",
        "typings",
        "security",
    ]

[tool.deptry.per_rule_ignores]
    DEP002 = [
        # CLI tools (invoked from command line, not imported)
        "autoflake",
        "bandit",
        "black",
        "codespell",
        "commitizen",
        "detect-secrets",
        "isort",
        "pip-audit",
        "pre-commit",
        "pylint",
        "pyrefly",
        "pyupgrade",
        "radon",
        "ruff",
        "vulture",
        # Type stubs
        "types-psutil",
        "types-python-dateutil",
        "types-pyyaml",
        "types-redis",
        "types-requests",
        "types-setuptools",
        "types-toml",
        # Runtime deps used indirectly (via pydantic, python-dotenv)
        "faker",
        "pydantic-core",
        "pytest",
        "pytest-cov",
        "python-dotenv",
    ]

[tool.ruff]
    extend = "../ruff-shared.toml"

    [tool.ruff.lint.isort]
        known-first-party = [
            "flext_oracle_wms",
        ]

[tool.poetry]
    [[tool.poetry.packages]]
        from    = "src"
        include = "flext_oracle_wms"


    [tool.poetry.dependencies]
        python = ">=3.13,<3.14"

[tool.pytest.ini_options]
    addopts = [
        "--cov-branch",
        "--cov-fail-under=90",
        "--cov-report=html:reports/coverage",
        "--cov-report=term-missing:skip-covered",
        "--cov-report=xml:reports/coverage.xml",
        "--cov=flext_oracle_wms",
        "--maxfail=1",
        "--strict-config",
        "--strict-markers",
        "--tb=short",
        "-ra",
    ]
    markers = [
        "automation: Automation tests",
        "declarative: Declarative integration tests",
        "e2e: End-to-end tests",
        "integration: Integration tests",
        "lgf_api: LGF API specific tests",
        "performance: Performance tests",
        "slow: Slow tests",
        "smoke: Smoke tests",
        "unit: Unit tests",
    ]
    minversion = "8.0"
    pythonpath = [
        "src",
    ]
    testpaths = [
        "tests",
    ]

        [tool.poetry.dependencies.flext-core]
            develop = true
            path    = "../flext-core"

                                                                        [tool.poetry.dependencies.flext-observability]
            develop = true
            path    = "../flext-observability"

                                                                                                                                        [tool.poetry.dependencies.flext-api]
            develop = true
            path    = "../flext-api"

    [tool.poetry.group.dev.dependencies]
        autoflake      = ">=2.3.1"
        black          = ">=25.1.0"
        codespell      = ">=2.3.0"
        commitizen     = ">=4.8.3"
        detect-secrets = ">=1.5.0"
        isort          = ">=6.0.1"
        pre-commit     = ">=4.0.1"
        pylint         = ">=3.3.0"
        pyrefly        = "^0.46.3"
        pyupgrade      = ">=3.19.0"
        radon          = ">=6.0.1"
        ruff           = ">=0.12.3"
        vulture        = ">=2.13"
    pytest-cov = "^7.0.0"
    pytest = "^9.0.2"
    opentelemetry-api = ">=1.39.1"
    opentelemetry-sdk = ">=1.39.1"
    prompt-toolkit = ">=3.0.52"
    sqlparse = ">=0.5.5"

    [tool.poetry.group.test.dependencies]
        
        
factory-boy         = ">=3.3.1"
        faker               = ">=37.4.0"
        hypothesis          = ">=6.125.0"
        pytest              = ">=8.4.0"
        pytest-benchmark    = ">=5.1.0"
        pytest-clarity      = ">=1.0.1"
        pytest-cov = ">=7.0.0"
        pytest-deadfixtures = ">=2.2.1"
        pytest-env          = ">=1.1.5"
        pytest-mock         = ">=3.14.0"
        pytest-sugar        = ">=1.0.0"
        pytest-timeout      = ">=2.4.0"
        pytest-xdist        = ">=3.8.0"

    [tool.poetry.group.typings.dependencies]
        types-psutil          = ">=7.0.0"
        types-python-dateutil = ">=2.9.0"
        types-pyyaml          = ">=6.0.12"
        types-redis           = ">=4.6.0"
        types-requests        = ">=2.32.4"
        types-setuptools      = ">=80.9.0"
        types-toml            = ">=0.10.8.20240310"

    [tool.poetry.group.security.dependencies]
        bandit    = ">=1.8.0"
        pip-audit = ">=2.7.3"
